--- a/gui/mountPrimaryWindow.ui
+++ b/gui/mountPrimaryWindow.ui
@@ -34,7 +34,7 @@
      <rect>
       <x>10</x>
       <y>60</y>
-      <width>240</width>
+      <width>161</width>
       <height>41</height>
      </rect>
     </property>
@@ -42,7 +42,7 @@
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Pipeline Selection</string>
+        <string>Mode</string>
        </property>
       </widget>
      </item>
@@ -53,12 +53,12 @@
        </property>
        <item>
         <property name="text">
-         <string>Streaming</string>
+         <string>File Caching</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>File Caching</string>
+         <string>Streaming</string>
         </property>
        </item>
       </widget>
@@ -139,7 +139,7 @@
    <widget class="QWidget" name="horizontalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>170</x>
       <y>60</y>
       <width>212</width>
       <height>41</height>
@@ -169,11 +169,6 @@
        <item>
         <property name="text">
          <string>Azure</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>S3</string>
         </property>
        </item>
       </widget>
