--- a/gui/FCAz_simpleSettings.ui
+++ b/gui/FCAz_simpleSettings.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>FCL_simpleSettings</class>
- <widget class="QWidget" name="FCL_simpleSettings">
+ <class>FCAz_simpleSettings</class>
+ <widget class="QWidget" name="FCAz_simpleSettings">
   <property name="geometry">
    <rect>
     <x>0</x>
