--- a/gui/config_common.ui
+++ b/gui/config_common.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>585</width>
+    <width>678</width>
     <height>425</height>
    </rect>
   </property>
@@ -14,29 +14,7 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="4" column="2">
-    <widget class="QPushButton" name="resetDefautSettings">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>165</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="layoutDirection">
-      <enum>Qt::RightToLeft</enum>
-     </property>
-     <property name="text">
-      <string>Reset Default Settings</string>
-     </property>
-     <property name="default">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0">
+   <item row="3" column="0">
     <widget class="QToolButton" name="advanced_settings">
      <property name="maximumSize">
       <size>
@@ -49,7 +27,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="2">
+   <item row="0" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -179,7 +157,7 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="0" rowspan="4">
+   <item row="0" column="0">
     <layout class="QVBoxLayout" name="verticalLayout_10" stretch="0,0,0,0,0">
      <property name="spacing">
       <number>6</number>
@@ -233,17 +211,17 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="1" colspan="2">
+   <item row="1" column="0" colspan="2">
     <widget class="QGroupBox" name="filecache_groupbox">
      <property name="title">
       <string/>
      </property>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>321</width>
+        <width>641</width>
         <height>51</height>
        </rect>
       </property>
@@ -269,18 +247,18 @@
      </widget>
     </widget>
    </item>
-   <item row="2" column="1" rowspan="2" colspan="2">
+   <item row="1" column="0" colspan="2">
     <widget class="QGroupBox" name="streaming_groupbox">
      <property name="title">
       <string/>
      </property>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>10</y>
         <width>241</width>
-        <height>101</height>
+        <height>122</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -384,6 +362,28 @@
        </item>
       </layout>
      </widget>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPushButton" name="resetDefautSettings">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>165</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::RightToLeft</enum>
+     </property>
+     <property name="text">
+      <string>Reset Default Settings</string>
+     </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
   </layout>
